feat: add update api documentation
